# TfsMCPServer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  example.py  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  vscode_example.md
tests/: __init__.py  test_server.py  test_tfs_client.py
tfs_mcp_server/: __init__.py  main.py  server.py  tfs_client.py  types.py
